# siksha

./: .gitignore  Cargo.toml  Justfile
docs/: index.html  style-de8a4641f6defae2.css  style-f2c8cfdda3bd97fa.css  viz-3ea06088b4bac01f.js  viz-3ea06088b4bac01f_bg.wasm  viz-45f176e33d00b3e.js  viz-7e5c07b5ac98ef64.js  viz-7e5c07b5ac98ef64_bg.wasm  viz-9350291e0071cf15.js  viz-b7f2182a297be0fb.js
nn/: Cargo.toml
nn/examples/: data.rs  model.rs  test.rs
nn/src/: lib.rs  main.rs  model.rs  transform.rs
output/: README.md
viz/: Cargo.toml  Trunk.toml  index.html  package-lock.json  tailwind.config.js
viz/src/: main.rs
