[workspace]
resolver = "2"
members = ["nn", "viz"]

[workspace.dependencies]
candle = { git = "https://github.com/huggingface/candle.git", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-datasets = { git = "https://github.com/huggingface/candle.git" }
argh = "0.1.12"
thiserror = "1.0.40"
anyhow = "1.0"
rand = "0.8.5"
glam = "0.24.1"
image = "0.24.7"
