[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle.workspace = true
candle-nn.workspace = true
candle-datasets.workspace = true
argh.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
glam.workspace = true
image.workspace = true

[features]
cuda = ["candle/cudnn", "candle-nn/cuda"]
