[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle.workspace = true
candle-nn.workspace = true
glam.workspace = true
num-traits = "0.2.16"
thiserror.workspace = true

[dev-dependencies]
candle-datasets.workspace = true
rand.workspace = true
image.workspace = true
argh.workspace = true
anyhow.workspace = true

[features]
cuda = ["candle/cudnn", "candle-nn/cuda"]
