[package]
name = "viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
web-sys = { version = "0.3.64", features = [
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
] }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.87"
leptos = { version = "0.5.1", features = ["csr", "nightly"] }
candle.workspace = true
candle-nn.workspace = true
glam.workspace = true
nn = { path = "../nn" }
